# chessman-rs

./: .gitignore  Cargo.toml
projects/chessman/: Cargo.toml  readme.md
projects/chessman/src/: board.rs  lib.rs
projects/chessman/src/renderer/: mod.rs
projects/chessman/src/solvers/: mod.rs  queens.rs
projects/deus-nqueens/: Cargo.toml  readme.md
projects/deus-nqueens/src/: lib.rs
projects/deus-nqueens/src/bishops/: display.rs  mod.rs
projects/deus-nqueens/src/castles/: display.rs  mod.rs
projects/deus-nqueens/src/queens/: display.rs  mod.rs  symmetry.rs
projects/deus-nqueens/src/queens_symmetry/: mod.rs
projects/deus-nqueens/src/renderer/: mod.rs
projects/deus-nqueens/tests/: main.rs
src/: lib.rs
src/solvers/: queens_iter.rs
