[package]
name = "chessman"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "fractal curves generation"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/nqueens-rs"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dev-dependencies]
pretty_assertions = "0.3"
