[package]
name = "chessman"
version = "0.1.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "Chess pieces SVG generator"
edition = "2018"
license = "MPL-2.0"
readme = "readme.md"
repository = "https://github.com/oovm/chessman-rs"
documentation = "https://docs.rs/chessman"


[dependencies]
svg = "0.13.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
