[package]
name = "deus-nqueens"
version = "0.5.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "fractal curves generation"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/oovm/chessman"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]


[dependencies]
svg = "0.13.1"
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "0.3"
