[package]
name = "deus-nqueens"
version = "0.4.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "fractal curves generation"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/oovm/chessman"
documentation = "https://docs.rs/deus-nqueens"



[dependencies]
num = "0.4.0"
svg = "0.13.1"
rand = "0.8.5"
ndarray = "0.15.6"
itertools = "0.10.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
